--- a/e-book-projectback/src/main/resources/static/css/cashcharge.css
+++ b/e-book-projectback/src/main/resources/static/css/cashcharge.css
@@ -30,11 +30,12 @@ body {
     justify-content: space-between;
     flex: 1;
 }
-.charge-units, .bonus-amounts {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 45%;
+.charge-units {
+    padding-left: 50px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
 }
 .charge-unit {
     font-size: var(--font-size-large);
