--- a/e-book-projectback/src/main/resources/templates/cashcharge.html
+++ b/e-book-projectback/src/main/resources/templates/cashcharge.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko"
-      xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>캐쉬충전</title>
     <link rel="stylesheet" href="../static/css/cashcharge.css" th:href="@{/css/cashcharge.css}">
+    <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/cashcharge.css}">
 
 
 </head>
@@ -18,18 +15,20 @@
         <div class="charge-options">
             <div class="charge-units">
                 <label class="charge-unit"><input type="radio" name="amount" value="1000">1000원</label>
-                <label class="charge-unit"><input type="radio" name="amount" value="5000">5000원</label>
-                <label class="charge-unit"><input type="radio" name="amount" value="10000">10000원</label>
-                <label class="charge-unit"><input type="radio" name="amount" value="50000">30000원</label>
-                <label class="charge-unit"><input type="radio" name="amount" value="50000">50000원</label>
+                <label class="charge-unit"><input type="radio" name="amount" value="5000">3000원</label>
+                <label class="charge-unit"><input type="radio" name="amount" value="10000">5000원</label>
+                <label class="charge-unit"><input type="radio" name="amount" value="50000">7000원</label>
+                <label class="charge-unit"><input type="radio" name="amount" value="50000">9000원</label>
+                <label class="charge-unit"><input type="radio" name="amount" value="1000">15000원</label>
+                <label class="charge-unit"><input type="radio" name="amount" value="5000">30000원</label>
             </div>
-            <div class="bonus-amounts">
-                <div class="bonus-amount">+보너스 금액</div>
-                <div class="bonus-amount">+보너스 금액</div>
-                <div class="bonus-amount">+보너스 금액</div>
-                <div class="bonus-amount">+보너스 금액</div>
-                <div class="bonus-amount">+보너스 금액</div>
-            </div>
+<!--            <div class="bonus-amounts">-->
+<!--                <div class="bonus-amount">+보너스 금액</div>-->
+<!--                <div class="bonus-amount">+보너스 금액</div>-->
+<!--                <div class="bonus-amount">+보너스 금액</div>-->
+<!--                <div class="bonus-amount">+보너스 금액</div>-->
+<!--                <div class="bonus-amount">+보너스 금액</div>-->
+<!--            </div>-->
         </div>
         <button class="charge-button">충전하기</button>
     </div>
