--- a/e-book-projectback/src/main/resources/templates/viewerpage.html
+++ b/e-book-projectback/src/main/resources/templates/viewerpage.html
@@ -1,74 +1,52 @@
 <!DOCTYPE html>
-<html lang="ko"
-      xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>뷰어</title>
-    <link rel="stylesheet" href="../static/css/viewerpage.css" th:href="@{/css/viewerpage.css}">
+    <link rel="stylesheet" href="../static/css/viwerpage.css" th:href="@{/css/viewrpage.css}">
+    <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://kit.fontawesome.com/6cefa8d439.js" crossorigin="anonymous"></script>
-    <script src="../static/js/viewerpage.js" th:src="@{/js/viewerpage.js}" defer></script>
 
 </head>
 <body>
-    <main id="main-section">
-        <div id="main-side-section">
-            <div id="top-container">
-                <div class="top-interaction-class">
-                    <section>
-                        <button class="page-button">다음 화</button>
-                    </section>
+    <header id="top-container">
+        <div class="top-interaction-class">
+            <section>
+                <button class="page-button">이전 화</button>
+                <i class="fa-solid fa-house fa-2x"></i>
+            </section>
 
-                    <section class="title-section">
-                        <i class="fa-solid fa-house fa-2x"></i>
-                        <span class="title">제목</span>
-                        <i class="fa-solid fa-comment fa-2x"></i>
-                    </section>
+            <section class="title-section">
+                <span class="title">제목</span>
+            </section>
 
-                    <section>
-                        <label>
-                            <select class="next-chapter-class-select">
-                                <option>회차 선택</option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                            </select>
-                        </label>
-                        <button class="page-button">이전 화</button>
-                    </section>
-                </div>
-            </div>
-
-            <div id="view-side-container">
-                <button id="left-arrow-section">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </button>
-                <section id="viewer-section">뷰어 섹션</section>
-                <button id="right-arrow-section">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-            </div>
-
-            <div class="view-pagebar-section">
-                <div class="view-page-bar-btn">
-                    <button>뷰어페이지 전환</button>
-                </div>
-
-                <div class="page-bar-container">
-                    <div class="page-bar-parent">
-                        <div class="page-bar-child"></div>
-                    </div>
-                </div>
-
-                <div class="view-page-bar-number">
-                    <label><input class="curt-page" type="number" value="1" max="139"></label>
-                    <span>/</span>
-                    <span class="total-page">139</span>
-                </div>
-            </div>
+            <section>
+                <label>
+                    <select class="next-chapter-class-select">
+                        <option>회차 선택</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                    </select>
+                </label>
+                <button class="page-button">다음 화</button>
+            </section>
         </div>
+    </header>
+    <main id="main-section">
+        <div id="view-side-container">
+            <button id="left-arrow-section scroll">
+                <i class="fa-solid fa-arrow-left"></i>
+            </button>
+            <section id="viewer-section scroll">
+                <img src="https://www.allreport.co.kr/View/%EC%9D%B8%ED%84%B0%EB%84%B7%20%ED%95%98%EC%9D%B4%ED%8D%BC%ED%85%8D%EC%8A%A4%ED%8A%B8%20%EA%B7%B8%EB%A6%AC%EA%B3%A0%20%EC%B1%85%EC%9D%98%20%EC%A2%85%EB%A7%90-%EB%B0%B0%EC%8B%9D%ED%95%9C_hwp_03.gif" alt="">
+                <img src="https://www.allreport.co.kr/View/%EC%9D%B8%ED%84%B0%EB%84%B7%20%ED%95%98%EC%9D%B4%ED%8D%BC%ED%85%8D%EC%8A%A4%ED%8A%B8%20%EA%B7%B8%EB%A6%AC%EA%B3%A0%20%EC%B1%85%EC%9D%98%20%EC%A2%85%EB%A7%90-%EB%B0%B0%EC%8B%9D%ED%95%9C_hwp_03.gif" alt="">
+            </section>
+            <button id="right-arrow-section scroll">
+                <i class="fa-solid fa-arrow-right"></i>
+            </button>
+        </div>
+
 
 
 
