--- a/ebookproject/src/main/resources/templates/layout/header.html
+++ b/ebookproject/src/main/resources/templates/layout/header.html
@@ -20,6 +20,7 @@
     <section>
         <div id="e-book-category-div">
             <a th:href="@{/mainPage}">
+                <img src="../../static/icons/bookimage.png" height="565" width="660"/>
                 <img class="img" src="../../static/icon/bookimage.png" th:src="@{icon/bookimage.png}"/>
             </a>
             <button type="submit">웹툰</button>
