--- a/ebookproject/src/main/resources/static/css/detail.css
+++ b/ebookproject/src/main/resources/static/css/detail.css
@@ -1,5 +1,3 @@
-@import url(pub/public.css);
-
 main{
     padding: 20px;
     width: 1000px;
@@ -28,7 +26,7 @@ main{
 #detail-img {
     width: 100%;
     height: 100%;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -105,6 +103,10 @@ main{
 
 .part .part-name {
     font-size: var(--font-size-large);
+}
+.part-date{
+    font-size: var(--font-size-small);
+    margin-left: 10px;
 }
 
 .part > .part-btn-container{
