--- a/ebookproject/src/main/resources/templates/detail.html
+++ b/ebookproject/src/main/resources/templates/detail.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}"
+>
 <head>
     <meta charset="UTF-8">
     <title>상세페이지</title>
-    <link href="../css/detail.css" rel="stylesheet">
-    <link href="../css/pub/header.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/d19fdaba43.js"></script>
+    <link rel="stylesheet" href="../static/css/pub/public.css" th:href="@{/css/pub/public.css}">
+    <link rel="stylesheet" href="../static/css/detail.css" th:href="@{/css/detail.css}">
 </head>
 <body>
-
-    <main>
+    <main layout:fragment="main">
         <!--상세 페이지 부분-->
         <section id="book-detail-section">
             <div id="book-detail-div">
                 <div id="book-detail-img-div">
-                    <div id="detail-img" style="background-image: url('https://i.namu.wiki/i/l0x04r27DjSQmS-WgYk6I5x6IkKMyvZjRMyK5dI3EMoMikzCd2Kfl2SMRdvL3-y4zpxI_qLP-fs3QToSR7AU3g.webp')">
+                    <div id="detail-img" th:style="|background-image: url('data:image/*; base64, ${book.bookImageUrl}')|">
                         <!-- 책 이미지를 여기에 넣으시면 됩니다 -->
                     </div>
                 </div>
             </div>
             <div id="book-detail-info-div">
-                <div id="detail-title">이것이 자바다 (교육현장에서 가장 많이 쓰인 JAVA 프로그래밍 기본서)</div>
+                <div th:text="${book.bookTitle}" id="detail-title">이것이 자바다 (교육현장에서 가장 많이 쓰인 JAVA 프로그래밍 기본서)</div>
                 <div id="detail-content">
                     <div id="save-btn-div">
-                        <p>저자 신용권, 임경균</p>
+                        <p th:text="${book.bookAuthor.replace('글','글 : ')}">저자 신용권, 임경균</p>
                         <button id="save"><i class="fa-regular fa-heart"></i></button>
                     </div>
-                    <p>출판 한빛미디어 2024.04.01</p>
-                    <p>최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</p>
+                    <p th:text="${book.bookPublisher.replace('출판사','출판사 : ')}">출판 한빛미디어 2024.04.01</p>
+                    <p th:text="${book.bookDescription.replace('접기','')}">최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</p>
                 </div>
             </div>
         </section>
         <!--파트 선택 부분-->
         <section id="part-section">
             <ul id="part-selection">
-                <li class="part">
+                <li class="part" th:each="chapter, stat:${book.bookChapters}">
                     <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
+                        <h6 th:text="${stat.count}" class="part-chapter">PART01</h6>
+                        <span class="part-name" th:text="${chapter.bookChapter}">파트제목</span>
+                        <span class="part-date" th:text="${chapter.bookUploadDate}">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
                         <button class="view">보기</button>
@@ -47,6 +52,7 @@
                     <div class="part-chapter-container">
                         <h6 class="part-chapter">PART01</h6>
                         <span class="part-name">파트제목</span>
+                        <span class="part-date">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
                         <span class="price">200p</span>
@@ -58,6 +64,7 @@
                     <div class="part-chapter-container">
                         <h6 class="part-chapter">PART01</h6>
                         <span class="part-name">파트제목</span>
+                        <span class="part-date">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
                         <span class="price">200p</span>
@@ -69,6 +76,7 @@
                     <div class="part-chapter-container">
                         <h6 class="part-chapter">PART01</h6>
                         <span class="part-name">파트제목</span>
+                        <span class="part-date">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
                         <span class="price">200p</span>
@@ -80,6 +88,7 @@
                     <div class="part-chapter-container">
                         <h6 class="part-chapter">PART01</h6>
                         <span class="part-name">파트제목</span>
+                        <span class="part-date">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
                         <span class="price">200p</span>
@@ -91,50 +100,7 @@
                     <div class="part-chapter-container">
                         <h6 class="part-chapter">PART01</h6>
                         <span class="part-name">파트제목</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
+                        <span class="part-date">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
                         <span class="price">200p</span>
