--- a/ebookproject/src/main/resources/static/css/detail.css
+++ b/ebookproject/src/main/resources/static/css/detail.css
@@ -1,34 +1,33 @@
 main{
-    padding: 20px;
+    padding: 0 20px;
     width: 1000px;
     margin: 0 auto;
 }
 /* 바디 부분 */
 #book-detail-section {
     display: flex;
-    /*border: 1px solid black;*/
+    border-bottom: 1px solid rgba(170,170,170,0.7);
+    padding-bottom: 100px;
 }
 
 #book-detail-div {
     display: flex;
     align-items: flex-start;
     /*position: relative;*/
-    background-color: var(--color5);
 }
 
 #book-detail-img-div {
-    background-color: whitesmoke;
     width: 300px;
-    height: 300px;
+    height: 400px;
     padding: 20px;
     /*border-right: 1px solid black;*/
 }
 #detail-img {
     width: 100%;
     height: 100%;
-    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 #book-detail-info-div {
@@ -41,6 +40,7 @@ main{
     padding: 20px;
 }
 #detail-title{
+    margin-top: 20px;
     border-bottom: 1px solid black;
 }
 
@@ -49,8 +49,11 @@ main{
     padding: 20px;
 }
 
-#detail-content p {
+#detail-content span {
     padding: 5px 0;
+}
+#book-description-section{
+    overflow: scroll;
 }
 
 #save-btn-div{
@@ -72,10 +75,21 @@ main{
 }
 
 /* 파트 선택 부분 */
-#part-selection {
-    margin-top: 20px;
-    /*border: 1px solid black;*/
+
+#select-section{
+    display: flex;
+    justify-content: right;
+    padding: 4px;
+    border-radius: 10px 10px 0 0;
+    background-color: rgba(170,170,170,0.2);
 }
+#select-section button{
+    margin: 0 3px;
+    cursor: pointer;
+    border: none;
+    background-color: unset;
+}
+
 
 .part {
     display: flex;
@@ -83,135 +97,92 @@ main{
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: var(--color5);
-    margin-bottom: 10px;
-    &:last-child{
-        margin-bottom: unset;
-    }
+    border-bottom:1px solid black
+}
+.part:last-child{
+    border:none;
+}
+#part-section{
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 50px;
 }
 
 .part-chapter-container{
     flex: 1;
 }
-.part-chapter-container > h6{
+.part-chapter-container span{
     display: inline-block;
     margin-right: 10px;
 }
-.part .part-chapter {
-    font-size: var(--font-size-large);
+.part-chapter{
+    font-size: var(--font-size-midium);
 }
-
-.part .part-name {
-    font-size: var(--font-size-large);
+.part-name{
+    font-size: var(--font-size-midium);
 }
 .part-date{
-    font-size: var(--font-size-small);
-    margin-left: 10px;
+    font-size: var(--font-size-XXsmall);
 }
 
+
+
 .part > .part-btn-container{
+    display: flex;
 }
-.part > .part-btn-container > span{
+
+.part-btn-container > span{
     font-size: var(--font-size-midium);
     margin-right: 10px;
 }
-.part > .part-btn-container > button{
+.part-btn-container > button{
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
-    font-size: var(--font-size-large);
+    margin: 0 5px;
+    padding: 5px 10px;
+    font-size: var(--font-size-Xsmall);
     cursor: pointer;
-    background-color: var(--color3);
-    color: white;
+    background-color: rgba(170,170,170,0.3);
     &:hover{
         opacity: 0.8;
     }
 }
-
-/* 댓글 부분 */
-#comment-section {
-    margin-top: 20px;
-    background-color: var(--color5);
-}
-
-.comment {
-    background-color: white;
-    width: 100%;
+#buy-btn, #cart-btn{
     display: flex;
-    padding: 20px;
-    font-size: var(--font-size-large);
-    border: 1px solid black;
+}
+#buy-btn[active], #cart-btn[active]{
+    display: none;
 }
 
-.comment-container > textarea{
-    width: 100%;
-    resize: none;
+#view-btn{
+    display: none;
+}
+#view-btn[active]{
+    display: flex;
 }
 
-#comment-div {
-    background-color: var(--color5);
-}
+/******************************************/
 
-.user-comment-div {
-    width: 100%;
+nav.pagination-nav{
+    text-align: center;
+    padding: 50px 0;
 }
-
-.comment-author {
-    display: inline-block;
-    float: left;
-    font-weight: bold;
-    font-size: var(--font-size-Xlarge);
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
-.comment-like-btn-div{
-    display: inline-block;
-}
-
-.user-profile {
-    margin: 10px;
-    top: 20px;
-}
-
-.user-profile img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-
-.comment-text-area{
-    padding: 10px;
-    border: 2px solid black;
-    font-size: var(--font-size-Xlarge);
-    width: 100%;
-    height: 150px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-    resize: none;
-}
-
-.comment-like {
-    background-color: transparent;
-    border: none;
-    color: #ff6b6b;
+nav.pagination-nav li{
+    display: inline-flex;
+    margin: 0 2px;
+    width: 35px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
-    font-size: var(--font-size-Xlarge);
 }
-
-.comment-regist-div{
-    text-align: right;
+nav.pagination-nav li[active]{
+    border-bottom: 1px solid rgba(125,125,125,0.8);
 }
-
-.comment-regist-div > .comment-btn {
-    /*display: flex;*/
-    font-size: var(--font-size-midium);
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
-    justify-content: right;
-
+nav.pagination-nav a{
+    font-size: var(--font-size-large);
 }
-
-
-
+a{
+    color: black;
+    text-decoration: none;
+}
