--- a/ebookproject/src/main/resources/templates/detail.html
+++ b/ebookproject/src/main/resources/templates/detail.html
@@ -27,154 +27,49 @@
                 <div th:text="${book.bookTitle}" id="detail-title">이것이 자바다 (교육현장에서 가장 많이 쓰인 JAVA 프로그래밍 기본서)</div>
                 <div id="detail-content">
                     <div id="save-btn-div">
-                        <p th:text="${book.bookAuthor.replace('글','글 : ')}">저자 신용권, 임경균</p>
+                        <span th:text="${book.bookAuthor.replace('글','글 : ')}">저자 신용권, 임경균</span>
                         <button id="save"><i class="fa-regular fa-heart"></i></button>
                     </div>
-                    <p th:text="${book.bookPublisher.replace('출판사','출판사 : ')}">출판 한빛미디어 2024.04.01</p>
-                    <p th:text="${book.bookDescription.replace('접기','')}">최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</p>
+                    <span th:text="${book.bookPublisher.replace('출판사','출판사 : ')}">출판 한빛미디어 2024.04.01</span>
+                    <span id="book-description-section" th:text="${book.bookDescription.replace('접기','')}">최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</span>
                 </div>
             </div>
         </section>
         <!--파트 선택 부분-->
         <section id="part-section">
+            <section id="select-section">
+                <button>최신순</button>
+                <span> | </span>
+                <button>첫화부터</button>
+
+            </section>
             <ul id="part-selection">
                 <li class="part" th:each="chapter, stat:${book.bookChapters}">
                     <div class="part-chapter-container">
-                        <h6 th:text="${stat.count}" class="part-chapter">PART01</h6>
+                        <b th:text="${stat.count}" class="part-chapter">PART01</b>
                         <span class="part-name" th:text="${chapter.bookChapter}">파트제목</span>
                         <span class="part-date" th:text="${chapter.bookUploadDate}">작성 날짜</span>
                     </div>
                     <div class="part-btn-container">
-                        <button class="view">보기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                        <span class="part-date">작성 날짜</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                        <span class="part-date">작성 날짜</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                        <span class="part-date">작성 날짜</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                        <span class="part-date">작성 날짜</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
-                    </div>
-                </li>
-                <li class="part">
-                    <div class="part-chapter-container">
-                        <h6 class="part-chapter">PART01</h6>
-                        <span class="part-name">파트제목</span>
-                        <span class="part-date">작성 날짜</span>
-                    </div>
-                    <div class="part-btn-container">
-                        <span class="price">200p</span>
-                        <button class="purchase">구매</button>
-                        <button class="cart">담기</button>
+                        <button id="buy-btn" type="button">구매</button>
+                        <button id="cart-btn" type="button">담기</button>
+                        <button id="view-btn" type="button" class="view">보기</button>
                     </div>
                 </li>
             </ul>
         </section>
-        <!--댓글 부분-->
-        <section id="comment-section">
-            <div id="comment-div">
-                <div class="comment">
-                    <div class="user-profile"><img alt="#" src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj"></div>
-                    <div class="user-comment-div">
-                        <div class="comment-author">@user-0275</div>
-                        <div class="comment-like-btn-div">
-                            <button class="comment-like"><i class="fa-regular fa-heart"></i></button>
-                        </div>
-                        <div class="comment-container">
-                            <textarea class="comment-text-area" placeholder="댓글을 입력해주세요!"></textarea>
-                        </div>
-                        <div class="comment-regist-div">
-                            <button class="comment-btn">댓글 달기</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="comment">
-                    <div class="user-profile"><img alt="#" src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj"></div>
-                    <div class="user-comment-div">
-                        <div class="comment-author">@user-0275</div>
-                        <div class="comment-like-btn-div">
-                            <button class="comment-like"><i class="fa-regular fa-heart"></i></button>
-                        </div>
-                        <div class="comment-container">
-                            <textarea class="comment-text-area" placeholder="댓글을 입력해주세요!"></textarea>
-                        </div>
-                        <div class="comment-regist-div">
-                            <button class="comment-btn">댓글 달기</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="comment">
-                    <div class="user-profile"><img alt="#" src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj"></div>
-                    <div class="user-comment-div">
-                        <div class="comment-author">@user-0275</div>
-                        <div class="comment-like-btn-div">
-                            <button class="comment-like"><i class="fa-regular fa-heart"></i></button>
-                        </div>
-                        <div class="comment-container">
-                            <textarea class="comment-text-area" placeholder="댓글을 입력해주세요!"></textarea>
-                        </div>
-                        <div class="comment-regist-div">
-                            <button class="comment-btn">댓글 달기</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="comment">
-                    <div class="user-profile"><img alt="#" src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj"></div>
-                    <div class="user-comment-div">
-                        <div class="comment-author">@user-0275</div>
-                        <div class="comment-like-btn-div">
-                            <button class="comment-like"><i class="fa-regular fa-heart"></i></button>
-                        </div>
-                        <div class="comment-container">
-                            <textarea class="comment-text-area" placeholder="댓글을 입력해주세요!"></textarea>
-                        </div>
-                        <div class="comment-regist-div">
-                            <button class="comment-btn">댓글 달기</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <nav class="pagination-nav">
+            <ul class="pagination">
+                <li><a href="#"><i class="fa-solid fa-angle-left"></i></a></li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#"><i class="fa-solid fa-angle-right"></i></a></li>
+
+            </ul>
+
+        </nav>
     </main>
 </body>
 </html>
