--- a/e-book-projectback/src/main/resources/static/css/viwerpage.css
+++ b/e-book-projectback/src/main/resources/static/css/viwerpage.css
@@ -120,3 +120,72 @@ i:hover{
 #right-arrow-section\ scroll{
     display: none;
 }
+
+/*********************************************/
+.view-pagebar-section{
+    display: none;
+}
+
+.view-pagebar-section[active]{
+    position: absolute;
+    display: flex;
+    background-color: #e0e0e0;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    height: 80px;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.view-page-bar-btn > button{
+    border-radius: 10px;
+    padding: 10px;
+}
+.curt-page{
+    border-radius: 5px;
+}
+
+.view-page-bar-number{
+
+}
+.view-page-bar-number > label, .view-page-bar-number .total-page{
+    display: inline-block;
+    width: 60px;
+    text-align: center;
+}
+.view-page-bar-number input{
+    width: 100%;
+    text-align: center;
+    border: none;
+    padding: 10px;
+    outline: unset;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.page-bar-container{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 400px;
+    height: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.page-bar-parent{
+    flex: 1;
+    width: 100%;
+    height: 30%;
+    background-color: black;
+}
+.page-bar-child{
+    position: absolute;
+    height: 150%;
+    transform: translate(-100%, -35%);
+    width: 5px;
+    /*height: 15px;*/
+    background-color: #2d2626;
+}
