--- a/e-book-projectback/src/main/resources/templates/viewerpage.html
+++ b/e-book-projectback/src/main/resources/templates/viewerpage.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko"
-      xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>뷰어</title>
     <link rel="stylesheet" href="../static/css/viwerpage.css" th:href="@{/css/viewrpage.css}">
     <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://kit.fontawesome.com/6cefa8d439.js" crossorigin="anonymous"></script>
-    <script src="../static/js/viewerpage.js" th:src="/js/viewerpage.js"></script>
-
 
 </head>
 <body>
@@ -51,24 +45,6 @@
             <button id="right-arrow-section scroll">
                 <i class="fa-solid fa-arrow-right"></i>
             </button>
-        </div>
-
-        <div class="view-pagebar-section">
-            <div class="view-page-bar-btn">
-                <button>뷰어페이지 전환</button>
-            </div>
-
-            <div class="page-bar-container">
-                <div class="page-bar-parent">
-                    <div class="page-bar-child"></div>
-                </div>
-            </div>
-
-            <div class="view-page-bar-number">
-                <label><input class="curt-page" type="number" value="1" max="139"></label>
-                <span>/</span>
-                <span class="total-page">139</span>
-            </div>
         </div>
 
 
