--- a/ebookproject/src/main/resources/templates/searchbook.html
+++ b/ebookproject/src/main/resources/templates/searchbook.html
@@ -47,7 +47,8 @@
                 </section>
             </div>
         </article>
-        <section>
+        <section id="search-result">
+            <h1>검색 결과</h1>
             <ul id="search-info-section">
                 <li class="search-info-image">
                     <a href="">
