--- a/ebookproject/src/main/resources/templates/user/resetPassword.html
+++ b/ebookproject/src/main/resources/templates/user/resetPassword.html
@@ -10,22 +10,18 @@
 </head>
 <body>
     <main>
-        <form>
+        <form method="POST" th:action="@{/user/resetPassword}">
             <section>
                 <span>비밀번호 재설정</span>
                 <a href="/user/login">X</a>
             </section>
             <div class="find-div">
                 <label>
-                    <input type="text" id="find-pw-id" placeholder="아이디입력">
-                    <input type="text" id="id-input-section" placeholder="이름 입력">
-                    <input type="email" id="find-pw-email" placeholder="이메일입력">
+                    <input type="text" id="find-pw-id" name="userId" placeholder="아이디입력">
+                    <input type="text" id="id-input-section" name="userName" placeholder="이름 입력">
+                    <input type="email" id="find-pw-email" name="userEmail" placeholder="이메일입력">
                 </label>
-                <div>
-                    <span>임시 비밀번호 : </span>
-                    <span>이거</span>
-                </div>
-                <button type="button" id="find-pw-btn">이메일 전송하기</button>
+                <button id="find-pw-btn">이메일 전송하기</button>
             </div>
         </form>
     </main>
