--- a/ebookproject/src/main/resources/static/css/searchbook.css
+++ b/ebookproject/src/main/resources/static/css/searchbook.css
@@ -3,7 +3,6 @@ main{
     margin: var(--main-margin);
 }
 img{
-    object-fit: cover;
     cursor: pointer;
 }
 li{
@@ -34,6 +33,11 @@ a{
     flex: 0 0 var(--slide-size);
     min-width: 0;
     padding-left: var(--slide-spacing);
+}
+.embla__slide a{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 .embla__slide__number {
     border-radius: 1.8rem;
@@ -149,6 +153,11 @@ a{
 }
 
 /*************************************/
+#search-result > h1{
+    margin-top: 100px;
+}
+
+
 .view .embla {
     display: inline-flex;
     justify-content: center;
@@ -270,7 +279,6 @@ a{
     margin-top: 100px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
     border-radius: 10px;
 }
 .search-info-image{
@@ -281,6 +289,7 @@ a{
 
 }
 .search-info-image img{
+    border-radius: 10px;
     width: 100%;
     height: 100%;
 }
