--- a/ebookproject/src/main/resources/templates/mypage.html
+++ b/ebookproject/src/main/resources/templates/mypage.html
@@ -71,8 +71,8 @@
                     </div>
                 </div>
                 <div>
-                    <section id="like-list-section">
-                        <a class="like-list">
+                    <section id="like-list-section" class="scroll">
+                        <a href="" class="like-list">
                             <div>
                                 <img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
                             </div>
@@ -87,34 +87,21 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="like-list">
+                    </section>
+                    <section id="buy-list-section" class="scroll">
+                        <a href="" class="buy-list">
                             <div>
-                                <img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
-                            </div>
-                            <div>
-                                <div class="like-btn">
-                                    <span>1. 이것이 자바다</span>
-                                    <i class="fa-regular fa-heart"></i>
+                                <div>
+                                    <span class="buy-list-title">1. 이것이 자바다</span>
                                 </div>
                                 <div>
-                                    <span>저자 : 신용권, 임경균</span>
-                                    <span>출판 미디어 2024.04.01</span>
+                                    <span class="buy-list-author">저자 : 신용권, 임경균</span>
+                                    <span class="buy-list-publisher">출판 미디어 2024.04.01</span>
                                 </div>
                             </div>
-                        </a>
-                        <a class="like-list">
                             <div>
-                                <img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
-                            </div>
-                            <div>
-                                <div class="like-btn">
-                                    <span>1. 이것이 자바다</span>
-                                    <i class="fa-regular fa-heart"></i>
-                                </div>
-                                <div>
-                                    <span>저자 : 신용권, 임경균</span>
-                                    <span>출판 미디어 2024.04.01</span>
-                                </div>
+                                <span class="buy-list-category">책 제목</span>
+                                <span class="buy-list-date">작성 날짜</span>
                             </div>
                         </a>
                     </section>
