--- a/ebookproject/src/main/resources/templates/main.html
+++ b/ebookproject/src/main/resources/templates/main.html
@@ -53,18 +53,18 @@
                 </section>
             </div>
         </article>
+
         <section id="sub-section">
-            <section class="embla sub-repeat-section">
-                <h1>액션</h1>
+
+            <section class="embla sub-repeat-section" th:each="bookMap: ${booksByCategory}">
+                <h1 th:text="${bookMap.key}">액션</h1>
                 <div class="embla__viewport">
                     <div class="embla__container sub-img-section">
-                        <div class="embla__slide sub-img-box">
-                            <a href=""><img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/></a>
+                        <div class="embla__slide sub-img-box" th:each="book: ${bookMap.value}">
+                            <a th:href="@{|/detail/${book.bookNo}|}">
+                                <img th:src="${book.bookImage.fileUrl}" src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
+                            </a>
                         </div>
-                        <div class="embla__slide sub-img-box">
-                            <a href=""><img src="https://i.pinimg.com/736x/21/da/75/21da75d88f8e94c189bea3db12707f60.jpg" alt=""/></a>
-                        </div>
-
                     </div>
                 </div>
             </section>
