--- a/ebookproject/src/main/resources/templates/cashcharge.html
+++ b/ebookproject/src/main/resources/templates/cashcharge.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>캐쉬충전</title>
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
-    <link rel="stylesheet" href="../static/css/cashcharge.css" th:src="@{/css/cashcharge.css}">
+    <link rel="stylesheet" href="../static/css/cashcharge.css" th:href="@{/css/cashcharge.css}">
     <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
     <script src="../static/js/cashcharge.js" th:src="@{/js/cashcharge.js}"  defer></script>
