--- a/ebookproject/src/main/resources/templates/layout/header.html
+++ b/ebookproject/src/main/resources/templates/layout/header.html
@@ -38,7 +38,7 @@
                     <h4>인기 도서 목록</h4>
                     <ol class="search-view">
                         <li>
-                            <span th:href="@{#}">ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
+                            <span th:href="@{/searchbook}">ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
                         </li>
                         <li>
                             <span>ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
