--- a/ebookproject/src/main/resources/templates/layout/header.html
+++ b/ebookproject/src/main/resources/templates/layout/header.html
@@ -29,22 +29,22 @@
         <div id="header-user-div">
             <form class="search-form">
                 <label class="search-label">
-                    <input type="text">
+                    <input id="search-text" type="text" />
                     <button id="search" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </label>
                 <section class="search-section">
-                    <h4>인기 도서 목록</h4>
+                    <h4>검색 도서 목록</h4>
                     <ol class="search-view">
                         <li>
-                            <span th:href="@{/searchbook}">ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
+                            <span>책 제목 1번 예시</span>
                         </li>
                         <li>
-                            <span>ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
+                            <span>책 제목 2번 예시</span>
                         </li>
                         <li>
-                            <span>ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
+                            <span>책 제목 3번 예시</span>
                         </li>
                     </ol>
                 </section>
