--- a/ebookproject/src/main/resources/templates/user/mypage.html
+++ b/ebookproject/src/main/resources/templates/user/mypage.html
@@ -10,14 +10,13 @@
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
     <title>내 정보 페이지</title>
     <link rel="stylesheet" href="../../static/css/user/mypage.css" th:href="@{/css/user/mypage.css}">
-    <link rel="stylesheet" href="../../static/css/public/public.css" th:href="@{/public.css}">
+    <link rel="stylesheet" href="../../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://kit.fontawesome.com/d19fdaba43.js" crossorigin="anonymous"></script>
     <script src="../../static/js/mypage.js" th:src="@{/js/mypage.js}" defer></script>
     <script src="../../static/js/user/like.js" th:src="@{/js/user/like.js}" defer></script>
 </head>
 <body>
     <main layout:fragment="main">
-
         <section th:object="${#authentication.principal}">
             <section id="my-info-section">
                 <h1>내 정보</h1>
@@ -33,7 +32,7 @@
                             <span th:text="*{username}">홍길동</span>
                         </div>
                         <section id="password-change-btn">
-                            <a href="">
+                            <a href="/user/resetPassword">
                                 비밀번호 변경
                             </a>
                         </section>
@@ -73,18 +72,18 @@
                     </div>
                 </div>
                 <div>
-                    <section id="like-list-section" class="scroll" th:if="${param.get('list').toString().equals('like')}">
-                        <div th:if="${books.size() == 0}">
+                    <section id="like-list-section" class="scroll" th:if="${query == 'like'}">
+                        <div id="none-like" th:if="${books.size() == 0}">
                             <b>좋아요 내역이 없습니다</b>
                         </div>
-                        <a th:href="@{|/detail/${book.bookNo}|}" class="like-list" th:each="book: ${books}">
+                        <a th:href="@{|/detail/${book.bookNo}/ASC|}" class="like-list" th:each="book: ${books}">
                             <div>
                                 <img th:src="${book.bookImage.fileUrl}" src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
                             </div>
                             <div>
                                 <div class="like-btn">
                                     <span th:text="${book.bookTitle}">1. 이것이 자바다</span>
-                                    <button type="button" th:data="${book.bookNo}" class="save" active>
+                                    <button id="like-btn" type="button" th:data="${book.bookNo}" class="save" active>
                                         <i class="fa-solid fa-heart"></i>
                                     </button>
                                 </div>
@@ -95,7 +94,7 @@
                             </div>
                         </a>
                     </section>
-                    <section id="buy-list-section" class="scroll" th:if="${param.get('list').toString().equals('buy')}">
+                    <section id="buy-list-section" class="scroll" th:if="${query == 'buy'}">
                         <a href="" class="buy-list">
                             <div>
                                 <div>
