--- a/ebookproject/src/main/resources/templates/layout/header.html
+++ b/ebookproject/src/main/resources/templates/layout/header.html
@@ -27,25 +27,18 @@
         </div>
 
         <div id="header-user-div">
-            <form class="search-form">
-                <label class="search-label">
-                    <input id="search-text" type="text" />
+            <form th:action="@{/searchbook}" method="get" class="search-form">
+                <label for="search-text" class="search-label">
+                    <input id="search-text" type="text" name="bookTitle" required />
                     <button id="search" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </label>
                 <section class="search-section">
-                    <h4>검색 도서 목록</h4>
-                    <ol class="search-view">
-                        <li>
-                            <span>책 제목 1번 예시</span>
-                        </li>
-                        <li>
-                            <span>책 제목 2번 예시</span>
-                        </li>
-                        <li>
-                            <span>책 제목 3번 예시</span>
-                        </li>
+                    <ol th:each="books : ${book}" class="search-view">
+                        <li><a th:href="${books.bookTitle}">책 제목 1번 예시</a></li>
+                        <li><span>책 제목 2번 예시</span></li>
+                        <li><span>책 제목 3번 예시</span></li>
                     </ol>
                 </section>
             </form>
