--- a/ebookproject/src/main/resources/templates/viewerpage.html
+++ b/ebookproject/src/main/resources/templates/viewerpage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../static/css/viewerpage.css" th:href="@{/css/viewerpage.css}">
     <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://kit.fontawesome.com/6cefa8d439.js" crossorigin="anonymous"></script>
-    <script src="../static/js/user/viewerpage.js" th:src="@{js/user/viewerpage.js}" defer></script>
+    <script src="../static/js/viewerpage.js" th:src="@{js/user/viewerpage.js}" defer></script>
 
 
 </head>
@@ -38,6 +38,25 @@
             </section>
         </div>
     </header>
+
+    <div class="view-pagebar-section">
+        <div class="view-page-bar-btn">
+            <button>뷰어페이지 전환</button>
+        </div>
+
+        <div class="page-bar-container">
+            <div class="page-bar-parent">
+                <div class="page-bar-child"></div>
+            </div>
+        </div>
+
+        <div class="view-page-bar-number">
+            <label><input class="curt-page" type="number" value="1" max="139"></label>
+            <span>/</span>
+            <span class="total-page">139</span>
+        </div>
+    </div>
+
     <main id="main-section">
         <div id="view-side-container">
             <button id="left-arrow-section scroll">
