챕터 구매 book_order db 반영

--- a/ebookproject/src/main/resources/static/css/detail.css
+++ b/ebookproject/src/main/resources/static/css/detail.css
@@ -154,10 +154,10 @@ main{
     display: none;
 }
 
-#view-btn{
+#view-btn view{
     display: none;
 }
-#view-btn[active]{
+#view-btn view[active]{
     display: flex;
 }
 
