--- a/ebookproject/src/main/resources/templates/user/mypage.html
+++ b/ebookproject/src/main/resources/templates/user/mypage.html
@@ -8,10 +8,10 @@
 <head>
     <meta charset="UTF-8">
     <title>내 정보 페이지</title>
-    <link rel="stylesheet" href="../static/css/mypage.css" th:href="@{/css/mypage.css}">
-    <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
+    <link rel="stylesheet" href="../../static/css/mypage.css" th:href="@{/css/mypage.css}">
+    <link rel="stylesheet" href="../../static/css/public/public.css" th:href="@{/public.css}">
     <script src="https://kit.fontawesome.com/d19fdaba43.js" crossorigin="anonymous"></script>
-    <script src="../static/js/mypage.js" th:src="@{/js/mypage.js}" defer></script>
+    <script src="../../static/js/mypage.js" th:src="@{/js/mypage.js}" defer></script>
 </head>
 <body>
     <main layout:fragment="main">
