--- a/ebookproject/src/main/resources/static/css/public/header.css
+++ b/ebookproject/src/main/resources/static/css/public/header.css
@@ -74,7 +74,7 @@ button:hover {
     border: none;
 }
 
-#search, #user {
+#search-button, #user {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,7 +91,7 @@ button:hover {
 .search-section{
     position: absolute;
     border-radius: 5px;
-    bottom: -100px;
+    bottom: -25px;
     background-color: #dedede;
     padding: 10px;
     width: 110%;
