--- a/ebookproject/src/main/resources/templates/viewerpage.html
+++ b/ebookproject/src/main/resources/templates/viewerpage.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>뷰어</title>
-    <link rel="stylesheet" href="../static/css/viewerpage.css" th:href="@{/css/viewerpage.css}">
+    <link rel="stylesheet" href="../static/css/viewerpage" th:href="@{/css/viewerpage}">
     <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://kit.fontawesome.com/6cefa8d439.js" crossorigin="anonymous"></script>
     <script src="../static/js/viewerpage.js" th:src="@{js/user/viewerpage.js}" defer></script>
